se agregan try-catch