@@ -7,8 +7,8 @@ import com.example.TorneoTCG.dto.CartaDTO;
 import com.example.TorneoTCG.model.Carta;
 import com.example.TorneoTCG.repository.CartaRepository;
 
+import java.util.ArrayList; 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CartaService {
@@ -16,19 +16,18 @@ public class CartaService {
     @Autowired
     private CartaRepository cartaRepository;
 
-    // =====================================
-    // BUSCAR POR ID
-    // =====================================
-
-public CartaDTO buscarPorId(Long id) {
-    Carta carta = cartaRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Carta no encontrada"));
-    return convertirADTO(carta);
-}
+    public CartaDTO buscarPorId(Long id) {
+        Carta carta = cartaRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Carta no encontrada"));
+        return convertirADTO(carta);
+    }
 
     public CartaDTO guardarCarta(CartaDTO cartaDTO) {
         Carta carta = new Carta();
         carta.setNombre(cartaDTO.getNombre());
+        carta.setDescripcion(cartaDTO.getDescripcion());
+        carta.setRareza(cartaDTO.getRareza());
+        carta.setCosto(cartaDTO.getCosto());
         
         Carta cartaGuardada = cartaRepository.save(carta);
         
@@ -38,10 +37,12 @@ public CartaDTO buscarPorId(Long id) {
     public List<CartaDTO> obtenerTodas() {
         return cartaRepository.findAll().stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList(); // ¡Cambiado a .toList() limpio!
     }
 
     private CartaDTO convertirADTO(Carta carta) {
+        if (carta == null) return null;
+
         CartaDTO dto = new CartaDTO();
         dto.setId(carta.getId());
         dto.setNombre(carta.getNombre());
@@ -49,21 +50,28 @@ public CartaDTO buscarPorId(Long id) {
         dto.setRareza(carta.getRareza());
         dto.setCosto(carta.getCosto());
         
+        try {
+            if (carta.getCartaMazos() != null && !carta.getCartaMazos().isEmpty()) {
+                List<String> nombres = carta.getCartaMazos().stream()
+                        .map(cm -> cm.getMazo().getNombre()) 
+                        .toList(); // ¡Cambiado aquí también!
+                dto.setNombresMazos(nombres);
+            } else {
+                dto.setNombresMazos(new ArrayList<>()); 
+            }
+        } catch (Exception e) {
+            dto.setNombresMazos(new ArrayList<>());
+        }
+        
         return dto;
     }
 
-    // =====================================
-    // ELIMINAR
-    // =====================================
-
-public String eliminar(Long id) {
-    if (!cartaRepository.existsById(id)) {
-        return "Carta no encontrada";
+    public String eliminar(Long id) {
+        if (!cartaRepository.existsById(id)) {
+            return "Carta no encontrada";
+        }
+        cartaRepository.deleteById(id);
+        return "Carta eliminada exitosamente";
     }
-    cartaRepository.deleteById(id);
-    return "Carta eliminada exitosamente";
 }
-    //prueba
-}
-
 
